Creato un nuovo file netlify.toml con le impostazioni corrette

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,9 @@
 [build]
-  publish = "/"  # La directory principale del progetto
-  functions = "netlify/functions"  # Se hai funzioni serverless
+  publish = "."  # Imposta la directory di pubblicazione alla radice del repository
+  functions = "netlify/functions"  # Percorso delle funzioni serverless
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  publish = "/"  # La directory principale del progetto
-  functions = "netlify/functions"  # Se hai funzioni serverless
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
