--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Sito per gestire ordini di felpe",
   "main": "server.js",
   "scripts": {
-      "start": "node server.js",
-      "build": "echo 'No build step'",
-      "test": "echo 'No test specified' && exit 0"
+    "start": "node server.js",
+    "build": "echo 'No build step'",
+    "test": "echo 'No test specified' && exit 0"
   },
   "dependencies": {
-      "express": "^4.17.1",
-      "body-parser": "^1.19.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "faunadb": "^4.8.0"
   },
-  "devDependencies": {},
   "author": "Your Name",
   "license": "ISC"
 }
